--- a/dreamerv3/configs.yaml
+++ b/dreamerv3/configs.yaml
@@ -6,6 +6,7 @@ defaults:
   logdir: /dev/null
   replay: uniform
   replay_size: 1e6
+  wdb_name: dreamerv3
   replay_online: False
   eval_dir: ''
   filter: '.*'
