--- a/dreamerv3/configs.yaml
+++ b/dreamerv3/configs.yaml
@@ -169,6 +169,7 @@ dmc_vision:
 
   task: dmc_walker_walk
   run.train_ratio: 512
+  run.steps: 1e6
   rssm.deter: 512
   .*\.cnn_depth: 32
   .*\.layers: 2
@@ -181,6 +182,7 @@ dmc_proprio:
   task: dmc_walker_walk
   run.train_ratio: 512
   rssm.deter: 512
+  run.steps: 5e5
   .*\.cnn_depth: 32
   .*\.layers: 2
   .*\.units: 512
