--- a/conda_jax_env.yaml
+++ b/conda_jax_env.yaml
@@ -21,6 +21,7 @@ dependencies:
     - memory-maze==1.0.2
     - procgen
     - jax[cuda11_pip] -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
+    - flax
     - atari-py==0.2.9 
     - opencv-python
     - gym==0.19.0
